# Bakalarka

./: .gitignore
src/gazebo_nav_goal_gui/: CMakeLists.txt  package.xml
src/gazebo_nav_goal_gui/include/: gazebo_goal_tool.hh
src/gazebo_nav_goal_gui/src/: gazebo_goal_tool.cc  gazebo_nav_goal_gui.cpp
src/mrvk_gazebo/: CMakeLists.txt  package.xml  predicted_path_obstacle_layer.xml  predicted_sweep_risk_layer.xml
src/mrvk_gazebo/config/costmap/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml
src/mrvk_gazebo/config/navigation/: dwa_local_planner.yaml  move_base.yaml  teb_local_planner.yaml
src/mrvk_gazebo/config/rviz/: config.rviz
src/mrvk_gazebo/include/mrvk_gazebo/: predicted_path_obstacle_layer.h  predicted_sweep_risk_layer.h
src/mrvk_gazebo/launch/: experiment_pingpong.launch  gazebo.launch  robot.launch
src/mrvk_gazebo/scripts/: safe_zone_goal_router.py
src/mrvk_gazebo/src/: dynamic_obstacle_predictor.cpp  goal_pinger.cpp  predicted_path_obstacle_layer.cpp  predicted_sweep_risk_layer.cpp  robot_motion_predictor.cpp  safe_zone_goal_router.cpp
src/mrvk_gazebo/worlds/: empty.world
src/mrvk_gazebo_plugins/: CMakeLists.txt  package.xml
src/mrvk_gazebo_plugins/src/: oscillate_box_plugin.cpp
src/path_detection/: CMakeLists.txt  package.xml
