<?xml version="1.0"?>
<package format="2">
  <name>gazebo_nav_goal_gui</name>
  <version>0.0.1</version>
  <description>Gazebo GUI plugin for setting 2D navigation goals like in RViz.</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_dev</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>

  <export>
  </export>
</package>