<?xml version="1.0"?>
<package format="2">
  <name>mrvk_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>Gazebo plugins for MRVK (e.g., oscillating box).</description>

  <maintainer email="adam@todo.todo">adam</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
